crux-mir/test/symb_eval/num/checked_mul.good
test checked_mul/3a1fbbbh::crux_test[0]: returned 44, FAILED

failures:

---- checked_mul/3a1fbbbh::crux_test[0] counterexamples ----
Failure for test/symb_eval/num/checked_mul.rs:6:5: 6:12: error: in checked_mul/3a1fbbbh::crux_test[0]
attempt to multiply with overflow

[Crux] Overall status: Invalid.
